rendering fix for dragging screen on mobile

--- a/app/css/application.css
+++ b/app/css/application.css
@@ -58,6 +58,7 @@ body {
 
 h1 {
   display: inline-block;
+  position: inherit;
   margin: 3em auto;
   order: 2; }
 
