--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -14,6 +14,7 @@ body {
 
 h1 {
 	display: inline-block;
+	position: inherit;
 	margin: 3em auto;
 	order: 2;
 }
